# SpikingC

./: .gitignore  Makefile  Makefile.am  configure  configure.ac  default.nix
include/: config.h  lif.h  linear.h  mem.h  model.h  snnconfig.h  utility.h
patcher/: main.c
src/: config.c  lif.c  linear.c  main.c  mem.c  model.c  snnconfig.c  utility.c
